<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/picture2" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/menu"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:src="@drawable/menu"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/topText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topText3"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:layout_marginTop="4dp"
            android:layout_alignBottom="@+id/menu"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:src="@drawable/plus"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/bottomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/topText"
            android:layout_marginTop="3dp"
            android:text="@string/bottomText3"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top"
        android:layout_gravity="bottom"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#BBDEFB"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/statisticsPic"
                    android:layout_width="80dp"
                    android:layout_height="65dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/statistics" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/statisticsPic"
                    android:text="@string/statisticsText"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="6dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#90CAF9"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/photosPic"
                    android:layout_width="80dp"
                    android:layout_height="65dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/photos" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/photosPic"
                    android:gravity="center_horizontal"
                    android:text="@string/photosText"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="6dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#64B5F6"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/calendarPic"
                    android:layout_width="80dp"
                    android:layout_height="65dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/calendar" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/calendarPic"
                    android:text="@string/calendarText"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="6dp" />

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#1A237E"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/profilePic"
                    android:layout_width="80dp"
                    android:layout_height="65dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/profile" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/profilePic"
                    android:text="@string/profileText"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="6dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#BBDEFB"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/laboratoryPic"
                    android:layout_width="80dp"
                    android:layout_height="65dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/lab" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/laboratoryPic"
                    android:text="@string/laboratoryText"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="6dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#90CAF9"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/alertPic"
                    android:layout_width="80dp"
                    android:layout_height="65dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/alert" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/alertPic"
                    android:text="@string/alertText"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="6dp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>