<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/picture" >

    <TextView
        android:id="@+id/topText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:text="@string/topText"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/topText"
        android:layout_marginTop="88dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#9E9E9E" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:layout_marginTop="3dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/middleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/middleText"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/bottomText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal"
        android:text="@string/bottomText"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/middleText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp"
        android:background="#E53935"
        android:text="sign in"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</RelativeLayout>